--- a/app/assets/stylesheets/fmfitness.css.scss
+++ b/app/assets/stylesheets/fmfitness.css.scss
@@ -51,23 +51,6 @@ i.fas.fa-arrow-left:hover {
 
 
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar {
-  display: none;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
-body,
-div#rc-project-view,
-div#fm-project-view,
- {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-}
-
-
-
-
 
 
 // Main
