--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -12,8 +12,8 @@
 @media only screen and (min-width: 1001px) {
   header {
     left: 50%;
-    width: 1002px;
-    margin-left: -509px;
+    width: 1000px;
+    margin-left: -500px;
   }
 
   header.opaque:after {
