--- a/app/assets/stylesheets/hoodcast.css.scss
+++ b/app/assets/stylesheets/hoodcast.css.scss
@@ -55,23 +55,6 @@ i.fas.fa-arrow-left:hover {
 
 
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar {
-  display: none;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
-body,
-div#rc-project-view,
-div#fm-project-view,
- {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-}
-
-
-
-
 
 div#rc-project-view {
   position: absolute;
